--- a/_config.yml
+++ b/_config.yml
@@ -1,36 +1,36 @@
-# Hexo Configuration
-## Docs: https://hexo.io/docs/configuration.html
-## Source: https://github.com/hexojs/hexo/
+# Hexo 配置
+## 文档: https://hexo.io/docs/configuration.html
+## 源码: https://github.com/hexojs/hexo/
 
-# Site
-title: Hexo
+# 站点信息
+title: 星苒鸭 · 博客
 subtitle: ''
-description: ''
+description: 星苒鸭 xingranya · 个人博客与作品集
 keywords:
-author: John Doe
-language: en
+author: xingranya
+language: zh-CN
 timezone: ''
 
 # URL
-## Set your site url here. For example, if you use GitHub Page, set url as 'https://username.github.io/project'
-url: http://example.com
+## 设置你的网站地址。例如使用 GitHub Pages 的项目页，设置为 'https://username.github.io/project'
+url: https://xingranya.asia
 permalink: :title/
 permalink_defaults:
 pretty_urls:
   trailing_index: true # Set to false to remove trailing 'index.html' from permalinks
   trailing_html: true # Set to false to remove trailing '.html' from permalinks
 
-# Directory
+# 目录
 source_dir: source
 public_dir: public
-# tag_dir: tags
-# archive_dir: archives
-# category_dir: 
+# tag_dir: tags            # 标签目录（默认在 source/tags）
+# archive_dir: archives    # 归档目录（默认在 source/archives）
+# category_dir:            # 分类目录（默认在 source/categories）
 code_dir: downloads/code
 i18n_dir: :lang
 skip_render:
 
-# Writing
+# 写作设置
 new_post_name: :title.md # File name of new posts
 default_layout: post
 titlecase: false # Transform title into titlecase
@@ -55,51 +55,51 @@ prismjs:
   line_number: true
   tab_replace: ''
 
-# Home page setting
-# path: Root path for your blogs index page. (default = '')
-# per_page: Posts displayed per page. (0 = disable pagination)
-# order_by: Posts order. (Order by date descending by default)
+# 首页设置
+# path: 博客首页的根路径（默认 ''）
+# per_page: 每页文章数量（0 表示不分页）
+# order_by: 文章排序方式（默认按日期倒序）
 index_generator:
   path: ''
   per_page: 10
   order_by: -date
 
-# Category & Tag
+# 分类与标签
 default_category: uncategorized
 category_map:
 tag_map:
 
-# Metadata elements
-## https://developer.mozilla.org/en-US/docs/Web/HTML/Element/meta
+# 元数据（Meta）
+## 参考: https://developer.mozilla.org/en-US/docs/Web/HTML/Element/meta
 meta_generator: true
 
-# Date / Time format
-## Hexo uses Moment.js to parse and display date
-## You can customize the date format as defined in
+# 日期 / 时间格式
+## Hexo 使用 Moment.js 解析与显示日期
+## 可在此自定义日期格式：
 ## http://momentjs.com/docs/#/displaying/format/
 date_format: YYYY-MM-DD
 time_format: HH:mm:ss
 ## updated_option supports 'mtime', 'date', 'empty'
 updated_option: 'mtime'
 
-# Pagination
-## Set per_page to 0 to disable pagination
+# 分页
+## 将 per_page 设为 0 可禁用分页
 per_page: 10
 pagination_dir: page
 
-# Include / Exclude file(s)
-## include:/exclude: options only apply to the 'source/' folder
+# 包含 / 排除 文件
+## include:/exclude: 仅作用于 'source/' 目录
 include:
 exclude:
 ignore:
 
-# Extensions
-## Plugins: https://hexo.io/plugins/
-## Themes: https://hexo.io/themes/
+# 扩展
+## 插件: https://hexo.io/plugins/
+## 主题: https://hexo.io/themes/
 theme: defaultone
 
-# Deployment
-## Docs: https://hexo.io/docs/one-command-deployment
+# 部署
+## 文档: https://hexo.io/docs/one-command-deployment
 deploy:
   type: ''
 live2d:
