--- a/package.json
+++ b/package.json
@@ -19,15 +19,15 @@
     "hexo-generator-category": "^2.0.0",
     "hexo-generator-index": "^4.0.0",
     "hexo-generator-tag": "^2.0.0",
-    "hexo-helper-live2d": "^3.1.1",
+    "hexo-helper-live2d": "^3.1.0",
     "hexo-renderer-ejs": "^2.0.0",
     "hexo-renderer-marked": "^7.0.0",
     "hexo-renderer-stylus": "^3.0.1",
     "hexo-server": "^3.0.0",
     "hexo-theme-landscape": "^1.0.0",
-    "particles.js": "^2.0.0",
     "live2d-widget-model-chitose": "^1.0.5",
     "live2d-widget-model-gf": "^1.0.5",
-    "live2d-widget-model-wanko": "^1.0.5"
+    "live2d-widget-model-wanko": "^1.0.5",
+    "particles.js": "^2.0.0"
   }
 }
