feat: 启用一言功能并更新页脚信息
- 在主题配置中启用一言功能
- 将页脚中的"Someone"替换为"xingranya"
- 删除不再需要的贡献指南、行为准则和赞助文档

--- a/themes/defaultone/_config.yml
+++ b/themes/defaultone/_config.yml
@@ -122,7 +122,7 @@ home_banner:
   subtitle:
     text: ["Hi there 👋, I'm xingranya / 星苒鸭", 'A passionate developer from China']# 文案数组
     hitokoto:  # 一言配置
-      enable: false # 是否启用一言
+      enable: true # 是否启用一言
       show_author: true # 是否显示作者
       api: https://v1.hitokoto.cn # API 地址，可添加类型
     typing_speed: 100 # 打字速度 (ms)
